# mapster

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  locations_dump.json  pyproject.toml  requirements.txt
app/: celery.py  settings.py  urls.py
core/: admin.py  mixins.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_location_appr_error_dist_location_closest_guess_and_more.py  0003_alter_location_lat_alter_location_lng.py  0004_guess_street_view_url_alter_location_street_view_url.py  0005_alter_guess_guessed_lat_alter_guess_guessed_lng.py  0006_location_appr_error_location_appr_time_and_more.py  0007_remove_location_appr_error_dist.py  0008_alter_location_options.py  0009_remove_guess_street_view_url.py  0010_alter_guess_options_alter_location_options.py  0011_rating_remove_location_closest_guess.py  0012_alter_rating_data.py  0013_alter_rating_updated_at.py  0014_guess_score.py  0015_rename_appr_error_location_avg_error_and_more.py  0016_location_country.py  0017_alter_location_options_location_complexity.py  0018_location_avg_moves_location_avg_score_and_more.py  0019_feedback.py  0020_alter_gameresult_options.py  0021_feedback_sent_at.py
telegram_bot/: main.py
users/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_telegramuser_options_and_more.py  0003_telegramuser_appr_error_telegramuser_appr_time_and_more.py  0004_telegramuser_total_score.py  0005_alter_telegramuser_username.py  0006_rename_appr_error_telegramuser_avg_error_and_more.py  0007_remove_telegramuser_last_online.py  0008_telegramuser_avg_moves_per_game_and_more.py  0009_telegramuser_chat_id.py
