[project]
name = "mapster"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "celery>=5.5.1",
    "coverage>=7.8.2",
    "django>=5.1.7",
    "django-celery-beat>=2.8.0",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.28.0",
    "geopy>=2.4.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pytelegrambotapi==4.26.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "ruff>=0.11.11",
    "whitenoise>=6.9.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "B", "C90", "UP"]
ignore = ["E501"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations"
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
